Make the app compatible with jlink
* @ComponentScan must be sacrificed since it relies on the JAR in modulepath/classpath, but jlink does not retain JARs ¯\_(ツ)_/¯

* Logback and slf4j were replaced with Log4J2 since Slf4J depends on logback (i.e. linked to the Logger implementation class in bytecode) and Logback depends on the SLF4J APIs. In other words, circular dependencies are prohibited in the modular world.

* Configuration proxying was disabled because the way Spring handles proxies is not compatible with truly modularized apps. Fortunately, AOP is not being (yet) extensively used.

* The Spring Boot Test starter was removed in order to decrease the number of transitive dependencies to pay attention to